Cleaned up code format

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
 
     <!-- ~~~~~~~~~~~~~~ Intro Page ~~~~~~~~~~~~~~ -->
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 col-12 intro-photo text-center">
@@ -48,33 +47,35 @@
             </div>
         </div>
     </div>
-        
-    <!-- ~~~~~~~~~~~~~~ Main Page Content ~~~~~~~~~~~~~~ -->
 
+    <!-- ~~~~~~~~~~~~~~ Main Page Content ~~~~~~~~~~~~~~ -->
     <div class="container">
+
         <!-- Education -->
         <div class="row" id="education">
             <!-- title -->
             <div class="col-12 text-center top-padding bottom-padding">
                 <h1>Education <i class="title-icon fas fa-school"></i></h1>
             </div>
+
             <!-- summary -->
             <div class="col-12 text-center">
                 <div class="text-center">
                     <h3>University of California, Davis</h3>
                     <p class="mb-4">B.S. Computer Science and Engineering</p>
                     <p>University Honors Program</p>
-                    <p>GPA: 3.81/4.0</p>
+                    <p>GPA: 3.82/4.0</p>
                 </div>
             </div>
+
             <!-- courses -->
             <div class="col-md-6 col-12 top-padding">
-                <h4 class="text-uppercase text-center m-0">Courses</h4>
-                <hr class="my-4">
-                <div class="row courses">
-                    <div class="col-md-6 mb-3 mb-md-0">
-                        <div class="card h-100">
-                            <div class="card-body no-vertical-padding">
+                <div class="card h-100">
+                    <div class="card-body no-vertical-padding">
+                        <h4 class="text-uppercase text-center m-0">Courses</h4>
+                        <hr class="my-4">
+                        <div class="row courses">
+                            <div class="col-md-6 mb-3 mb-md-0">
                                 <ul>
                                     <li><p>Algorithm Analysis</p></li>
                                     <li><p>Data Structures</p></li>
@@ -86,11 +87,7 @@
                                     <li><p>Applied Data Science</p></li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-3 mb-md-0">
-                        <div class="card h-100">
-                            <div class="card-body no-vertical-padding">
+                            <div class="col-md-6 mb-3 mb-md-0">
                                 <ul>
                                     <li><p>Operating Systems</p></li>
                                     <li><p>Parallel Programming</p></li>
@@ -106,15 +103,16 @@
                     </div>
                 </div>
             </div>
+
             <!-- awards -->
             <div class="col-md-6 col-12 top-padding">
-                <h4 class="text-uppercase text-center m-0">Awards</h4>
-                <hr class="my-4">
-                <div class="row text-left">
-                    <div class="col-md-12 mb-3 mb-md-0">
-                        <div class="card h-100">
-                            <div class="card-body no-vertical-padding">
-                                <p><strong>Dean's Honor List</strong> - Quarterly award given to the top 16% 
+                <div class="card h-100">
+                    <div class="card-body no-vertical-padding">
+                        <h4 class="text-uppercase text-center m-0">Awards</h4>
+                        <hr class="my-4">
+                        <div class="row text-left">
+                            <div class="col-md-12 mb-3 mb-md-0">
+                                <p><strong>Dean's Honor List</strong> - Quarterly award given to the top 16%
                                     of students by grade point average in the same college and class level
                                 </p>
                                 <p><strong>Chevron Scholar Award</strong> - One of two students in the Computer Science and Engineering major
@@ -135,7 +133,8 @@
             <div class="col-12 text-center top-padding bottom-padding">
                 <h1>Experience <i class="title-icon fas fa-laptop-code"></i></h1>
             </div>
-            <!-- title -->
+
+            <!-- content -->
             <div class="container text-left">
                 <div class="row">
                     <div class="col-12">
@@ -146,19 +145,20 @@
                             <p class="pb-5">
                                 I am currently working at E&J Gallo as a programmer analyst intern.
                             </p>
+
                             <h2 class="pb-1">Data Processing Specialist</h2>
                             <h4 class="pb-1">UC Davis Genome Center</h4>
                             <p class="pb-1">June 2020 - December 2020</p>
                             <p class="pb-5">
-                                I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a> 
+                                I interned at <a href="https://predictioncenter.org/" target="_blank">CASP</a>
                                 (Critical Assessment of Techniques for Protein Structure Prediction) as a data processing assistant
                                 over the summer of 2020. The project aims to centralize researchers from around the world aiming
                                 to solve the infamous, fifty year-old protein folding problem— in other words understanding
                                 how and where a tertiary protein structure folds. This year, Google's DeepMind came up with an astounding
                                 solution that rivals the accuracy of laboratory measurements.
                                 <br><br>
-                                I helped migrate the computationally heavy parts of the CASP14 project to a more powerful Linux Machine 
-                                and a distributed system, while creating numerous Shell scripts to automate processing protein structures 
+                                I helped migrate the computationally heavy parts of the CASP14 project to a more powerful Linux Machine
+                                and a distributed system, while creating numerous Shell scripts to automate processing protein structures
                                 and logging files. I debugged older Perl scripts and tested the reliability of key data processing pipelines
                                 while I ran structural assessments of target structures and their predictions.
                                 <br><br>
@@ -167,6 +167,7 @@
                                 of 2021, I am hoping to move to a team focusing on developing and refining deep learning prediction methods
                                 to solve this extraordinary puzzle.
                             </p>
+
                             <h2 class="pb-1">Software Engineer Intern</h2>
                             <h4 class="pb-1">AltoPass, Inc.</h4>
                             <p class="pb-1">May 2020 - November 2020</p>
@@ -176,6 +177,7 @@
                                 Elastic Search and learned how to apply my skills to work with big data. The app recently went live on
                                 Google Play Store and App Store.
                             </p>
+
                             <h2 class="pb-1">Private Tutor</h2>
                             <h4 class="pb-1">Self Employed</h4>
                             <p class="pb-1">February 2017 - May 2021</p>
@@ -197,6 +199,7 @@
             <div class="col-12 text-center top-padding bottom-padding">
                 <h1>Projects <i class="title-icon fas fa-project-diagram"></i></h1>
             </div>
+
             <!-- First Row -->
             <div class="row text-center">
                 <!-- Sigma Chi Website -->
@@ -218,6 +221,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Customer Classification -->
                 <div class="col-md-4 mt-4 mt-md-0 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
@@ -237,6 +241,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Pouch -->
                 <div class="col-md-4 mt-4 mt-md-0 mb-3 mb-md-0 no-padding">
                     <div class="card h-100">
@@ -250,7 +255,7 @@
                                 </a>
                             </div>
                             <p class="mt-3">
-                                Pouch is a finance tracker application that reports the user's spending on a 
+                                Pouch is a finance tracker application that reports the user's spending on a
                                 across multiple bank accounts on a daily basis.
                                 <br>
                                 <strong>Contact for limited access</strong>
@@ -259,6 +264,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Second Row -->
             <div class="row text-center">
                 <!-- Sound Reactive LED Strip -->
@@ -281,6 +287,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Bit Project -->
                 <div class="col-md-6 mt-4 mb-0 no-padding">
                     <div class="card h-100">
@@ -294,8 +301,8 @@
                                 </a>
                             </div>
                             <p class="mt-3">
-                                I created numerous computer science activities and lessons as part of a 
-                                student run club at UC Davis called Bit Project aiming to create a STEM 
+                                I created numerous computer science activities and lessons as part of a
+                                student run club at UC Davis called Bit Project aiming to create a STEM
                                 curriculum for underrepresented grade schools in the Sacramento area.
                             </p>
                         </div>
@@ -310,6 +317,7 @@
             <div class="col-12 text-center top-padding bottom-padding">
                 <h1>Skills <i class="title-icon fas fa-cogs"></i></h1>
             </div>
+
             <!-- languages -->
             <div class="col-md-4 mb-3 mb-md-0">
                 <div class="card h-100">
@@ -326,6 +334,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- tools -->
             <div class="col-md-4 mb-3 mb-md-0">
                 <div class="card h-100">
@@ -343,6 +352,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- databases -->
             <div class="col-md-4 mb-3 mb-md-0">
                 <div class="card h-100">
@@ -355,6 +365,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
