Add recent internship description to experience

--- a/index.html
+++ b/index.html
@@ -139,10 +139,15 @@
                     <div class="col-12">
                         <div class="experience-container">
                             <h2 class="pb-1">IT Programmer Analyst Intern</h2>
-                            <h4 class="pb-1">E&J Gallo</h4>
-                            <p class="pb-1">June 2021 - Current</p>
+                            <h4 class="pb-1">E. & J. Gallo Winery</h4>
+                            <p class="pb-1">June 2021 - September 2021</p>
                             <p class="pb-5">
-                                I am currently working at E&J Gallo as a programmer analyst intern.
+                                During summer of 2021, I had the chance to work on a key microservice that winemaking and spirits making teams use to track production at the winery located in Modesto, CA. The team I worked with communicated with several winemaker managers, as well as the spirits production team and quality assurance, to understand their evolving needs and then upgrade the product tracking software to meet them.
+                                <br><br>
+                                My duties included making direct changes to the production database, upgrading the backend api with
+                                new endpoints to communicate the data to the frontend, and to engineer communication between front and backend to offer shortcut functionality for managing data. I also got the chance to work on the frontend itself, creating new views, components, modals, and other functional components to make data entry easier and quicker. This work allowed me to learn the inner workings of Java and Springboot, as well as TypeScript and Angular. The end result of my work allowed each winemaker to save around 500 hours per year of repetitive work and data entry that my work helped eradicate.
+                                <br><br>
+                                During the last week of my internship, I worked on a proof of concept to migrate a simple request response data matching http service to a serverless environment using AWS Lambda, in hopes of optimizing resource use and efficiency of the service.
                             </p>
 
                             <h2 class="pb-1">Data Processing Specialist</h2>
